.k8s/test-env/ingress/ingress.yaml
# Check this and remove mapped url for host vinrt.com : sudo vim /etc/hosts
# Access your app on http://vinrt.com/swagger-ui.html
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitness-api-ingress
  namespace: fitness-api
spec:
  rules:
    - host: vinrt.fitness.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: fitness-api-service
                port:
                  number: 8080
